Fixed hidden overflow

--- a/app/static/css/medical_certificate.css
+++ b/app/static/css/medical_certificate.css
@@ -1,7 +1,6 @@
 /* Kolor tła strony i przewijanie */
 body {
     background-color: #F2F5EA; /* Delikatniejszy odcień dla komfortu oczu */
-    overflow-y: hidden;
     scroll-behavior: smooth;
 }
 
